# retron

./: .gdbinit  .gitignore  ACTION_CHECKLIST.md  ARCHITECTURE.md  BOOT_CODE_REVIEW.md  BOOT_FIX_INSTRUCTIONS.md  BOOT_FIX_SUMMARY.md  CODE_REVIEW.md  CODE_REVIEW_COMPREHENSIVE.md  CODE_REVIEW_CPU_SUPPORT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_MILESTONES.md  DEVELOPMENT_PROCESS.md  EXECUTION_TEST_RESULTS.md  FILESYSTEM_IMPLEMENTATION.md  FILESYSTEM_STRATEGY.md  FINAL_SUMMARY_COMPLETE.md  GDB_INITIAL_SETUP.md  GDB_NEXT_STEPS.md  GDB_STACK_FIX.md  GDB_STUCK_TROUBLESHOOTING.md  GDB_TESTING_GUIDE.md  KERNEL_INITIAL_CHOICE.md  LICENSING.md  LOCAL_TESTING.md  Makefile  PROGRESS.md  PROGRESS.md.local.bak  Prompt.txt  QEMU_SERIAL_OUTPUT_CHECK.md  QEMU_SERIAL_OUTPUT_GUIDE.md  QEMU_UART_DEBUG.md  QUICK_START_DEBUG.md  README.md  REVIEW_SUMMARY.md  SUMMARY.md  TEST_RESULTS_2025-11-30.md  TKERNEL_ARCHITECTURE.md  UART_ADDRESS_VERIFICATION.md  (+59 more)
core/: Cargo.toml
core/src/: common.rs  device.rs  laptop.rs  lib.rs  mobile.rs  platform.rs
kernel/: Cargo.toml  build.rs  fix-elf-type.sh  linker-wrapper.sh  strip-dynamic-sections.sh  x86_64-retron.json
kernel/.cargo/: config.toml
kernel/src/: boot.s  boot_fixed.s  boot_stack.rs  boot_v2.s  config.rs  device.rs  filesystem.rs  fs_demo.rs  fs_test.rs  init_config.rs  interrupt.rs  kernel_test.rs  lib.rs  linker.ld  main.rs  memory.rs  multiboot.rs  prelude.rs  pvh.rs  simple.rs  stdio_terminal.rs  task.rs  terminal.rs  terminal_demo.rs  terminal_test.rs  test.rs  utkernel.rs
kernel/tests/: fs_demo.rs  memory_test.rs  terminal_demo.rs  terminal_test.rs
robot/: Cargo.toml
robot/src/: actuator.rs  communication.rs  control.rs  lib.rs  motion.rs  navigation.rs  sensor.rs
ui/: Cargo.toml
(+237 files in other folders)
